Added Guest model, controller, and Repository
